Se agrera recursos de prueba modulo 4, Servlet Context Contexto Externo, Request Dispatcher Mime Type Atrbutos , Acceso a recursos estaticos

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -31,5 +31,9 @@
 			<groupId>ec.ocejwcd.app</groupId>
 			<artifactId>api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
 	</dependencies>
 </project>
