--- a/web-module/src/main/webapp/WEB-INF/web.xml
+++ b/web-module/src/main/webapp/WEB-INF/web.xml
@@ -8,4 +8,12 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    <servlet>
+        <servlet-name>RequestContextInfo</servlet-name>
+        <servlet-class>ec.ocejwcd.app.examen.cap4.RequestContextInfo</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RequestContextInfo</servlet-name>
+        <url-pattern>/RequestContextInfo/*</url-pattern>
+    </servlet-mapping>
 </web-app>
