--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,34 @@
         <servlet-name>ContextInformation</servlet-name>
         <servlet-class>ec.ocejwcd.app.examen.cap4.ContextInformation</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>StaticResource</servlet-name>
+        <servlet-class>ec.ocejwcd.app.examen.cap4.StaticResource</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ImagenExternaJEE6</servlet-name>
+        <servlet-class>ec.ocejwcd.app.examen.cap4.ImagenExternaJEE6</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>MimeType</servlet-name>
+        <servlet-class>ec.ocejwcd.app.examen.cap4.MimeType</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RequestDipatcherContext</servlet-name>
+        <servlet-class>ec.ocejwcd.app.examen.cap4.RequestDipatcherContext</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ContenidoRequestDispatcher</servlet-name>
+        <servlet-class>ec.ocejwcd.app.examen.cap4.ContenidoRequestDispatcher</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RequestDipartcherNamed</servlet-name>
+        <servlet-class>ec.ocejwcd.app.examen.cap4.RequestDipartcherNamed</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>RequestDispatcherExterno</servlet-name>
+        <servlet-class>ec.ocejwcd.app.examen.cap4.RequestDispatcherExterno</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>MyServletQ15</servlet-name>
         <url-pattern>/MyServletQ15/*</url-pattern>
@@ -39,5 +67,33 @@
     <servlet-mapping>
         <servlet-name>ContextInformation</servlet-name>
         <url-pattern>/ContextInformation/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>StaticResource</servlet-name>
+        <url-pattern>/staticResource</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ImagenExternaJEE6</servlet-name>
+        <url-pattern>/imagenExternaJEE6</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MimeType</servlet-name>
+        <url-pattern>/MimeType/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RequestDipatcherContext</servlet-name>
+        <url-pattern>/RequestDipatcherContext/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ContenidoRequestDispatcher</servlet-name>
+        <url-pattern>/ContenidoRequestDispatcher/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RequestDipartcherNamed</servlet-name>
+        <url-pattern>/RequestDipartcherNamed/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RequestDispatcherExterno</servlet-name>
+        <url-pattern>/RequestDispatcherExterno/*</url-pattern>
     </servlet-mapping>
 </web-app>
